--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.25",
+    "axios": "^1.3.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
